--- a/docstatus.html
+++ b/docstatus.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <html>
  <head>
@@ -895,7 +896,6 @@
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
-	<!-- **************** -->
 	<tr>
 		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
@@ -906,7 +906,7 @@
 		<td align="center" class="good"><a href="./de/html/guide/mem/index.html">__</a></td>
 		<td align="center" class="good"><a href="./pt/html/guide/mem/index.html">__</a></td>
 		<td align="center" class="good"><a href="./ru/html/guide/mem/index.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/index.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/mem/index.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -920,10 +920,10 @@
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/guide/mem/mem-poke.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-poke.html">__</a></td>
-		<td align="center" class="obsolete"><a href="./de/html/guide/mem/mem-poke.html">_A</a></td>
-		<td align="center" class="obsolete"><a href="./pt/html/guide/mem/mem-poke.html">_A</a></td>
-		<td align="center" class="obsolete"><a href="./ru/html/guide/mem/mem-poke.html">_A</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-poke.html">__</a></td>
+		<td align="center" class="needtask"><a href="./de/html/guide/mem/mem-poke.html">CA</a></td>
+		<td align="center" class="needtask"><a href="./pt/html/guide/mem/mem-poke.html">CA</a></td>
+		<td align="center" class="needtask"><a href="./ru/html/guide/mem/mem-poke.html">CA</a></td>
+		<td align="center" class="needtask"><a href="./he/html/guide/mem/mem-poke.html">C_</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -937,10 +937,10 @@
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/guide/mem/mem-hex.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-hex.html">__</a></td>
-		<td align="center" class="good"><a href="./de/html/guide/mem/mem-hex.html">__</a></td>
-		<td align="center" class="needtask"><a href="./pt/html/guide/mem/mem-hex.html">_V</a></td>
-		<td align="center" class="needtask"><a href="./ru/html/guide/mem/mem-hex.html">_V</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-hex.html">__</a></td>
+		<td align="center" class="needtask"><a href="./de/html/guide/mem/mem-hex.html">C_</a></td>
+		<td align="center" class="needtask"><a href="./pt/html/guide/mem/mem-hex.html">CV</a></td>
+		<td align="center" class="needtask"><a href="./ru/html/guide/mem/mem-hex.html">CV</a></td>
+		<td align="center" class="needtask"><a href="./he/html/guide/mem/mem-hex.html">C_</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -957,109 +957,109 @@
 		<td align="center" class="needtask"><a href="./de/html/guide/mem/mem-menu.html">_V</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/guide/mem/mem-menu.html">_V</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/guide/mem/mem-menu.html">_V</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-menu.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/mem/mem-menu.html">_.</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Memory file panel</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/guide/mem/mem-filepanel.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/mem/mem-filepanel.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-filepanel.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/mem/mem-filepanel.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/mem/mem-filepanel.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/mem/mem-filepanel.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-filepanel.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/mem/mem-filepanel.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 		<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">v2.0 raw</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/guide/mem/mem-v2raw.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/mem/mem-v2raw.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-v2raw.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/mem/mem-v2raw.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/mem/mem-v2raw.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/mem/mem-v2raw.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-v2raw.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/mem/mem-v2raw.html">_.</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">v3.0 hex words</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/guide/mem/mem-v3word.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/mem/mem-v3word.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-v3word.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/mem/mem-v3word.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/mem/mem-v3word.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/mem/mem-v3word.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-v3word.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/mem/mem-v3word.html">_.</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">v3.0 hex bytes</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/guide/mem/mem-v3byte.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/mem/mem-v3byte.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-v3byte.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/mem/mem-v3byte.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/mem/mem-v3byte.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/mem/mem-v3byte.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-v3byte.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/mem/mem-v3byte.html">_.</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Binary data</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/guide/mem/mem-vbinary.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/mem/mem-vbinary.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-vbinary.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/mem/mem-vbinary.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/mem/mem-vbinary.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/mem/mem-vbinary.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-vbinary.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/mem/mem-vbinary.html">_.</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Ascii byte</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/guide/mem/mem-vascii.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/mem/mem-vascii.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/mem/mem-vascii.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/mem/mem-vascii.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/mem/mem-vascii.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/mem/mem-vascii.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/mem/mem-vascii.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/mem/mem-vascii.html">_.</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1076,7 +1076,7 @@
 		<td align="center" class="obsolete"><a href="./de/html/guide/log/index.html">__</a></td>
 		<td align="center" class="obsolete"><a href="./pt/html/guide/log/index.html">__</a></td>
 		<td align="center" class="obsolete"><a href="./ru/html/guide/log/index.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/log/index.html">__</a></td>
+		<td align="center" class="needtask"><a href="./he/html/guide/log/index.html">C_</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1093,7 +1093,7 @@
 		<td align="center" class="obsolete"><a href="./de/html/guide/log/selection.html">__</a></td>
 		<td align="center" class="obsolete"><a href="./pt/html/guide/log/selection.html">__</a></td>
 		<td align="center" class="obsolete"><a href="./ru/html/guide/log/selection.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/log/selection.html">__</a></td>
+		<td align="center" class="obsolete"><a href="./he/html/guide/log/selection.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1110,7 +1110,7 @@
 		<td align="center" class="nonexist"><a href="./de/html/guide/log/timetable.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/log/timetable.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/log/timetable.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/log/timetable.html">__</a></td>
+		<td align="center" class="obsolete"><a href="./he/html/guide/log/timetable.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1135,23 +1135,23 @@
 	</tr>
 	<!-- **************** -->
 	<tr>
-		<td height="17" class="good" align="center">3.7</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left" class="title" colspan="2">Command-line verification</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/guide/verify/index.html">__</a></td>
 		<td align="center" class="good"><a href="./fr/html/guide/verify/index.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/guide/verify/index.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/guide/verify/index.html">_T</a></td>
 		<td align="center" class="good"><a href="./pt/html/guide/verify/index.html">__</a></td>
 		<td align="center" class="good"><a href="./ru/html/guide/verify/index.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/verify/index.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/verify/index.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Substituting libraries</td>
