--- a/en/html/guide/mem/mem-hex.html
+++ b/en/html/guide/mem/mem-hex.html
@@ -17,44 +17,45 @@
         Hex editor
       </h1>
       <p>
-        Logisim includes an integrated hex editor for viewing and editing the contents of memory. To access it, bring up a pop-up menu for the memory component (<b class="tkeybd">Right-click</b> on the component ) and select <b class=menu>|&nbsp;Edit Contents....&nbsp;|</b> or in the properties select <b class="property">Contents</b>.
+        Logisim includes an integrated hex editor for viewing and editing the contents of memory. To access it, bring up a pop-up menu for the memory component (<b class="tkeybd">Right-click</b> on the component ) and select <b class="menu">|&nbsp;Edit Contents....&nbsp;|</b> or in the properties select <b class="property">Contents</b>.
       </p>
       <p align="center">
         <img src="../../../img-guide/mem-hex.png" alt="#########">
       </p>
       <p>
-        The numbers in italics at left display memory addresses, written in hexadecimal. The other numbers display values starting from that memory address; the hex editor may display four, eight, or sixteen values per line, depending on what fits in the window. To help with counting, each group of four values has a larger space between.</p>
+        The numbers in italics at left display memory addresses, written in hexadecimal. The other numbers display values starting from that memory address; the hex editor may display four, eight, or sixteen values per line, depending on what fits in the window. To help with counting, each group of four values has a larger space between.
       </p>
       <p>
         You can navigate through memory using the scroll bar or using the keyboard.Typing hexadecimal characters will alter the currently selected value.
-		<ul>
+      </p>
+      <ul>
         <li>The <b class="tkeybd">Down Arrow</b> or <b class="tkeybd">Enter</b> key will scroll down one line.
         </li>
         <li>The <b class="tkeybd">Up Arrow</b> or <b class="tkeybd">Ctrl+Enter</b> key will scroll up one line.
+        </li>
         <li>The <b class="tkeybd">mouse wheel</b> is used for the same scrolling functions.
         </li>
-        <li> The <b class="tkeybd">Right Arrow</b> or <b class="tkeybd">Space</b> keys will scroll one box to the right.
+        <li>The <b class="tkeybd">Right Arrow</b> or <b class="tkeybd">Space</b> keys will scroll one box to the right.
         </li>
-        <li> The <b class="tkeybd">Left Arrow</b> or <b class="tkeybd">Backspace</b> keys will scroll one box to the left.
+        <li>The <b class="tkeybd">Left Arrow</b> or <b class="tkeybd">Backspace</b> keys will scroll one box to the left.
         </li>
-		<li> The <b class="tkeybd">Page Down</b> or <b class="tkeybd">Ctrl+Space</b> keys will scroll down one page.
+        <li>The <b class="tkeybd">Page Down</b> or <b class="tkeybd">Ctrl+Space</b> keys will scroll down one page.
         </li>
-		<li> The <b class="tkeybd">Page Up</b> or <b class="tkeybd">Ctrl+Return</b> keys will scroll up one page.
+        <li>The <b class="tkeybd">Page Up</b> or <b class="tkeybd">Ctrl+Return</b> keys will scroll up one page.
         </li>
-		<li>The <b class="tkeybd">Home</b> and <b class="tkeybd">End</b> move the cursor to the beginning or end of the document.
+        <li>The <b class="tkeybd">Home</b> and <b class="tkeybd">End</b> move the cursor to the beginning or end of the document.
         </li>
-		<li>The <b class="tkeybd">Del</b> resets the selected cell with a zero.
+        <li>The <b class="tkeybd">Del</b> resets the selected cell with a zero.
         </li>
       </ul>
+      <p>
+        You can select a range of values by dragging the mouse, <b class="tkeybd">shift-clicking</b> the mouse, or navigating through memory with the keyboard while depressing the <b class="tkeybd">shift</b> key. Values may be copied and pasted using the <b class="menu">|&nbsp;Edit&nbsp;|</b> menu or the associated shortcuts key (<b class="tkeybd">Ctrl-C Ctrl-V,Ctrl-X...</b>); the clipboard can also be transferred into other applications.
       </p>
       <p>
-        You can select a range of values by dragging the mouse, <b class="tkeybd">shift-clicking</b> the mouse, or navigating through memory with the keyboard while depressing the <b class="tkeybd">shift</b> key. Values may be copied and pasted using the <b class=menu>|&nbsp;Edit&nbsp;|</b> menu or the associated shortcuts key (<b class="tkeybd">Ctrl-C Ctrl-V,Ctrl-X...</b>); the clipboard can also be transferred into other applications.
+        Two buttons (<b class="button">Open...</b>, <b class="button">Save..</b>) allow you to load or save data from a file. Information on file types can be found in <a href="mem-menu.html">Pop-up menus and files</a>
       </p>
       <p>
-        Two buttons (<b class="button">Open...</b>, <b class="button">Save..</b>) allow you to load or save data from a file. Information on file types can be found in <a href="mem-menu.html">Pop-up menus and files </a>
-      </p>
-      <p>
-        <b>Next:</b> <a href="mem-menu.html">Pop-up menus and files </a>.
+        <b>Next:</b> <a href="mem-menu.html">Pop-up menus and files</a> .
       </p>
     </div>
   </body>
