--- a/en/html/guide/mem/mem-v2raw.html
+++ b/en/html/guide/mem/mem-v2raw.html
@@ -45,8 +45,8 @@ ce 4f 6a cc 45 7*cc 12 24</pre>
       <p>
         If the width of the memory word in bits is smaller than the width of the data words in the file. Excessively large bits will be ignored.
       </p>
-      <p align="center">nter>
-        <img src="../../../../img-guide/memraw1.png" alt="#########" width="480&quot;" height="130">
+      <p align="center">
+        <img src="../../../../img-guide/memraw1.png" alt="#########" width="480" height="130">
       </p>
 	  <strong>Next:</strong> <a href="mem-menu.html">Pop-up menus and files</a>.
     </div>
