--- a/fr/html/guide/mem/mem-filepanel.html
+++ b/fr/html/guide/mem/mem-filepanel.html
@@ -17,48 +17,48 @@
         Panneau du fichier mémoire
       </h1>
       <p>
-	    Cette fenêtre s'ouvre quand la reconnaissance de fichier n'arrive pas à déterminer le type de la structure des données. Elle se compose d'une serine de case à cocher pour préciser les options de conversion. De deux onglets d'affichage hexadécimal qui présente les données du fichier et d'une zone de texte qui affiche les erreurs éventuellement détectées.
+        Cette fenêtre s'ouvre quand la reconnaissance de fichier n'arrive pas à déterminer le type de la structure des données. Elle se compose d'une série de cases à cocher pour préciser les options de conversion. De deux onglets d'affichage hexadécimal qui présente les données du fichier et d'une zone de texte qui affiche les erreurs éventuellement détectées.
       </p>
-	  <p align="center">
+      <p align="center">
         <img src="../../../img-guide/mem-filepanel.png" alt="#########">
       </p>
       <p>
         Les quatre boutons radio permettent de sélectionner un des types de structure de fichier présentée précédemment. Pour chaque type des cases à cocher s'activeront. Elles permettent de préciser les options spécifiques.<br>
         Vous trouvez les informations dans les pages dédiées à ces types
-		<ul>
+      </p>
+      <ul>
         <li>
-        <a href="mem-v2raw.html">v2.0 raw</a></b>
-		</li>
-		<li>
-		<a href="mem-v3word.html">v3.0 hex words plain/adressed</a>
-		</li>
-		<li>
-		<a href="mem-v3byte.html">v3.0 hex bytes big-endian/little-endian</a>
-		</li>
-		<li>
-		<a href="mem-vbinary.html#">Binary data big-endian/little-endian</a>
-		</li>
-		<li>
-		<a href="mem-vascii.html">Ascii byte escape big-endian/little-endian</a>
-		</li>
-		</ul>
-      </p>
+          <a href="mem-v2raw.html">v2.0 raw</a>
+        </li>
+        <li>
+          <a href="mem-v3word.html">v3.0 hex words plain/adressed</a>
+        </li>
+        <li>
+          <a href="mem-v3byte.html">v3.0 hex bytes big-endian/little-endian</a>
+        </li>
+        <li>
+          <a href="mem-vbinary.html#">Binary data big-endian/little-endian</a>
+        </li>
+        <li>
+          <a href="mem-vascii.html">Ascii byte escape big-endian/little-endian</a>
+        </li>
+      </ul>
       <p>
-        Le panneau d'affichage hexadécimal vous permet d'observer de quelle manière Logisim décode le fichier. 
+        Le panneau d'affichage hexadécimal vous permet d'observer de quelle manière Logisim décode le fichier.
       </p>
-	  <p align="center">
+      <p align="center">
         <img src="../../../../img-guide/mem-paneldecoded.png" alt="#########">
       </p>
-	  <p>
-	  Et de le comparer à sa version originale. 
-	  </p>
-	  <p align="center">
+      <p>
+        Et de le comparer à sa version originale.
+      </p>
+      <p align="center">
         <img src="../../../../img-guide/mem-paneloriginal.png" alt="#########">
       </p>
-	  <p>
-	    Au-dessous vous aurez un rapport sur le décodage et éventuellement des erreurs rencontrées.
-	   </p>
-	   <p align="center">
+      <p>
+        Au-dessous vous aurez un rapport sur le décodage et éventuellement des erreurs rencontrées.
+      </p>
+      <p align="center">
         <img src="../../../../img-guide/mem-panelerror.png" alt="#########">
       </p>
       <p>
