--- a/fr/html/guide/mem/mem-menu.html
+++ b/fr/html/guide/mem/mem-menu.html
@@ -24,25 +24,25 @@
       </p>
       <dl>
         <dt>
-          <b>Modifier le contenu: </b>
+          <b>Modifier le contenu:</b>
         </dt>
         <dd>
           Afficher un <a href="mem-hex.html">éditeur hexadécimal</a> pour éditer le contenu de la mémoire.
         </dd>
         <dt>
-          <b>Effacer le contenu&nbsp;: </b>
+          <b>Effacer le contenu&nbsp;:</b>
         </dt>
         <dd>
-          Réinitialise toutes les valeur des RAM avec des 0 ou aléatoirement selon les paramètres dans <a href="../opts/index.html">Les options de projet</a>. 
+          Réinitialise toutes les valeur des RAM avec des 0 ou aléatoirement selon les paramètres dans <a href="../opts/index.html">Les options de projet</a>.
         </dd>
         <dt>
-          <b>Charger l'image&hellip;&nbsp;: </b>
+          <b>Charger l'image…&nbsp;:</b>
         </dt>
         <dd>
-          Réinitialise toutes les valeurs en mémoire en fonction des valeurs trouvées dans un fichier. Le format du fichier est reconnu automatiquement et si ce n'est pas le cas le <a href="mem-filepanel.html">Panneau du fichier mémoire</a>  s'ouvre pour une sélection appropriée.
+          Réinitialise toutes les valeurs en mémoire en fonction des valeurs trouvées dans un fichier. Le format du fichier est reconnu automatiquement et si ce n'est pas le cas le <a href="mem-filepanel.html">Panneau du fichier mémoire</a> s'ouvre pour une sélection appropriée.
         </dd>
         <dt>
-          <b>Sauvegarder l'image&hellip;&nbsp;: </b>
+          <b>Sauvegarder l'image…&nbsp;:</b>
         </dt>
         <dd>
           Stocke toutes les valeurs en mémoire dans un fichier en utilisant un des formats décrits ci-dessous.
@@ -71,18 +71,16 @@
         </li>
         <li>
           <b><a href="mem-vbinary.html#">Binary data big-endian</a></b><br>
-          <b><a href="mem-vbinary.html#">Binary data little-endian</a></b> 
-		  Image de la mémoire brute et non codée en hexadécimale.
-		 
+          <b><a href="mem-vbinary.html#">Binary data little-endian</a></b> Image de la mémoire brute et non codée en hexadécimale.
         </li>
         <li>
           <b><a href="mem-vascii.html">Ascii byte escape big-endian</a></b><br>
           <b><a href="mem-vascii.html">Ascii byte escape little-endian</a></b>Fichier codé ASCII avec code escape, comme en C pour les caractères non imprimables.
         </li>
-        </ul>
-        <p>
-          <b>Suite&nbsp;:</b> <a href="mem-filepanel.html">panneau du fichier mémoire</a>.
-        </p>
+      </ul>
+      <p>
+        <b>Suite&nbsp;:</b> <a href="mem-filepanel.html">panneau du fichier mémoire</a>.
+      </p>
     </div>
   </body>
 </html>
