--- a/fr/html/libs/wiring/clock.html
+++ b/fr/html/libs/wiring/clock.html
@@ -98,7 +98,7 @@
            Décalage de phase
         </dt>
         <dd>
-          Le déphasage en tick de l'horloge. Ci-dessous deux hologes identiques dont une (en gris) a un déphasage de 1 tic.<br>
+          Le déphasage en tic de l'horloge. Ci-dessous deux hologes identiques dont une (en gris) a un déphasage de 1 tic.<br>
 		  <center>
 		  <img src="../../../../img-libs/clockshift.png" alt="#########" >
 		  </center>
