--- a/he/html/guide/mem/mem-vascii.html
+++ b/he/html/guide/mem/mem-vascii.html
@@ -28,7 +28,7 @@
     <p>
         במצב big-endian הזיכרון נחשב כרצף של בתים ללא קשר לגודל המילים שלו, עם
         משמאל לימין את הבתים הגבוהים ולאחר מכן את הבתים הנמוכים. ניתן למצוא איורים ב<a
-            href="mem-v3byte.html#little">v3.0 hex bytes כתובות big-endian</a>
+            href="mem-v3byte.html#addrbe">v3.0 hex bytes כתובות big-endian</a>
     </p>
     <h1 id="addr">
         Ascii byte escape little-endian
@@ -36,7 +36,7 @@
     <p>
         פורמט זה זהה לקודמת עם אותם מאפיינים. במצב little-endian, ה
         זיכרון נחשב כרצף של בתים עם הסיביות הכי פחות משמעותיות מימין לשמאל ולאחר מכן הכי הרבה
-        חלקים משמעותיים. אתה יכול למצוא איורים ב-<a href="mem-v3byte.html#little">v3.0 hex bytes כתובות
+        חלקים משמעותיים. אתה יכול למצוא איורים ב-<a href="mem-v3byte.html#addrle">v3.0 hex bytes כתובות
         little-endian</a>
     </p>
     <p>
