--- a/he/html/guide/mem/mem-vbinary.html
+++ b/he/html/guide/mem/mem-vbinary.html
@@ -21,7 +21,7 @@
         כנראה שלא ניתן לערוך את הקובץ בעורך טקסט נפוץ.<br>
         במצב big-endian הזיכרון נחשב כרצף של בתים ללא קשר לגודל המילים שלו, עם
         משמאל לימין את הבתים הגבוהים ולאחר מכן את הבתים הנמוכים. איורים ניתן למצוא ב<a
-            href="mem-v3byte.html#little">v3.0 hex bytes כתובות big-endian</a>
+            href="mem-v3byte.html#addrbe">v3.0 hex bytes כתובות big-endian</a>
     </p>
     <h1 id="addr">
         נתונים בינאריים little-endian
@@ -30,7 +30,7 @@
         פורמט זה זהה לפורמט הקודם עם אותם מאפיינים.<br>
         במצב little-endian, הזיכרון נחשב כרצף של בתים עם הכי פחות מימין לשמאל
         ביטים משמעותיים ולאחר מכן הביטים המשמעותיים ביותר. איורים ניתן למצוא ב<a
-            href="mem-v3byte.html#little">v3.0 hex bytes כתובות little-endian</a>
+            href="mem-v3byte.html#addrle">v3.0 hex bytes כתובות little-endian</a>
     </p>
     <p>
         <strong>הבא:</strong> <a href="mem-menu.html">תפריטים וקבצים קופצים</a>.
