--- a/he/html/guide/verify/index.html
+++ b/he/html/guide/verify/index.html
@@ -61,22 +61,22 @@
         מעגל חשמלי.
     </p>
     <blockquote>
-         <pre>00 00,000
-01 00 001
-10 00 010
-11 00 011
-00 01 001
-01 01 010
-10 01 011
-11 01 100
-00 10 010
-01 10 011
-10 10 100
-11 10 101
-00 11 011
-01 11 100
-10 11 101
-11 11 110
+        <pre>00      00      000
+01      00      001
+10      00      010
+11      00      011
+00      01      001
+01      01      010
+10      01      011
+11      01      100
+00      10      010
+01      10      011
+10      10      100
+11      10      101
+00      11      011
+01      11      100
+10      11      101
+11      11      110
 </pre>
     </blockquote>
     <p>
