--- a/pt/html/guide/mem/mem-menu.html
+++ b/pt/html/guide/mem/mem-menu.html
@@ -16,13 +16,13 @@
       <h1>
         Menus contextual e arquivos
       </h1>
-	   <h2>
+      <h2>
         O menu contextual
       </h2>
       <p>
         O menu de contexto para componentes de memória inclui mais quatro opções do que as comuns a todos os componentes:
       </p>
-	  <dl>
+      <dl>
         <dt>
           <b>Editar conteúdo:</b>
         </dt>
@@ -33,7 +33,7 @@
           <b>Limpar conteúdo:</b>
         </dt>
         <dd>
-          Redefine as ROMs para 0 e para RAMs para 0 ou aleatoriamente, dependendo das configurações nas <a href="../opts/index.html">Opções do Projeto</a>. 
+          Redefine as ROMs para 0 e para RAMs para 0 ou aleatoriamente, dependendo das configurações nas <a href="../opts/index.html">Opções do Projeto</a>.
         </dd>
         <dt>
           <b>arregar imagem...:</b>
@@ -48,16 +48,15 @@
           Armazena todos os valores na memória em um arquivo usando um dos formatos descritos abaixo.
         </dd>
       </dl>
-	  <h2>
-         Os formatos de arquivo
+      <h2>
+        Os formatos de arquivo
       </h2>
       <ul>
         <li>
           <b><a href="mem-v2raw.html">v2.0 raw</a></b> VVersão histórica do logisim permite a codificação "run.length" Formatos de arquivo
         </li>
         <li>
-          <b><a href="mem-v3word.html">v3.0 hex words plain</a></b> Próximo da versão v2.0 
-           estruturado em palavras
+          <b><a href="mem-v3word.html">v3.0 hex words plain</a></b> Próximo da versão v2.0 estruturado em palavras
         </li>
         <li>
           <b><a href="mem-v3word.html#addr">v3.0 hex words addressed</a></b> Como antes, com a possibilidade de definir um endereço de início para cada linha do arquivo.
@@ -78,8 +77,7 @@
           <b><a href="mem-vascii.html">Ascii byte escape big-endian</a></b><br>
           <b><a href="mem-vascii.html">Ascii byte escape little-endian</a></b> Arquivo codificado em ASCII com código de escape, como em C para caracteres não imprimíveis.
         </li>
-        </ul>
-<!--
+      </ul><!--
       <p>
         O formato de arquivo usado para arquivos de imagem é intencionalmente simples; isso lhe permitirá escrever um programa, como um montador, que gerará imagens de conteúdos que poderão ser carregados na memória. Como exemplo desse formato de arquivo, se tivermos uma memória de 256-bytes cujos cinco primeiros bytes de 2, 3, 0, 20, e -1, e todos os valores subsequentes forem 0, a imagem em arquivo texto teria o seguinte conteúdo:
       </p>
@@ -101,8 +99,8 @@ ff
       <p>
         Você poderá colocar comentários no arquivo usando o símbolo '#'. Todos os caracteres na linha a partir do símbolo "#" serão ignorado pelo Logisim.
       </p>
--->	
-	  <p>
+-->
+      <p>
         <b>Próximo:</b> <a href="mem-hex.html">Editor hexadecimal</a>.
       </p>
     </div>
