--- a/en/html/guide/mem/mem-filepanel.html
+++ b/en/html/guide/mem/mem-filepanel.html
@@ -17,48 +17,48 @@
         Memory file panel
       </h1>
       <p>
-	    This window opens when the file recognition fails to determine the type of the data structure. It consists of a series of checkboxes to specify the conversion options. Two hexadecimal display tabs that show the file data and a text box that displays any errors that may have been detected.
+        This window opens when the file recognition fails to determine the type of the data structure. It consists of a series of checkboxes to specify the conversion options. Two hexadecimal display tabs that show the file data and a text box that displays any errors that may have been detected.
       </p>
-	  <p align="center">
+      <p align="center">
         <img src="../../../img-guide/mem-filepanel.png" alt="#########">
       </p>
       <p>
         The four radio buttons are used to select one of the file structure types shown above. For each type checkboxes will be activated. They allow you to specify specific options.<br>
         You will find information in the pages dedicated to these types
-		<ul>
+      </p>
+      <ul>
         <li>
-        <a href="mem-v2raw.html">v2.0 raw</a></b>
-		</li>
-		<li>
-		<a href="mem-v3word.html">v3.0 hex words plain/adressed</a>
-		</li>
-		<li>
-		<a href="mem-v3byte.html">v3.0 hex bytes big-endian/little-endian</a>
-		</li>
-		<li>
-		<a href="mem-vbinary.html#">Binary data big-endian/little-endian</a>
-		</li>
-		<li>
-		<a href="mem-vascii.html">Ascii byte escape big-endian/little-endian</a>
-		</li>
-		</ul>
-      </p>
+          <a href="mem-v2raw.html">v2.0 raw</a>
+        </li>
+        <li>
+          <a href="mem-v3word.html">v3.0 hex words plain/adressed</a>
+        </li>
+        <li>
+          <a href="mem-v3byte.html">v3.0 hex bytes big-endian/little-endian</a>
+        </li>
+        <li>
+          <a href="mem-vbinary.html#">Binary data big-endian/little-endian</a>
+        </li>
+        <li>
+          <a href="mem-vascii.html">Ascii byte escape big-endian/little-endian</a>
+        </li>
+      </ul>
       <p>
-        The hexadecimal display panel allows you to observe how Logisim decodes the file. 
+        The hexadecimal display panel allows you to observe how Logisim decodes the file.
       </p>
-	  <p align="center">
+      <p align="center">
         <img src="../../../../img-guide/mem-paneldecoded.png" alt="#########">
       </p>
-	  <p>
-	    And compare it to its original version.
-	  </p>
-	  <p align="center">
+      <p>
+        And compare it to its original version.
+      </p>
+      <p align="center">
         <img src="../../../../img-guide/mem-paneloriginal.png" alt="#########">
       </p>
-	  <p>
-	    Below you will have a report on the decoding and any errors found.
-	   </p>
-	   <p align="center">
+      <p>
+        Below you will have a report on the decoding and any errors found.
+      </p>
+      <p align="center">
         <img src="../../../../img-guide/mem-panelerror.png" alt="#########">
       </p>
       <p>
