--- a/en/html/guide/mem/mem-v3byte.html
+++ b/en/html/guide/mem/mem-v3byte.html
@@ -17,7 +17,7 @@
     </h1>
     <div class="maindiv">
       <p>
-        This file is structured as in previous versions, the first line indicates the type of structure and then the following lines represent the sequence of bits in the memory. They are in ASCII with only hexadecimal symbols (two digits) without the 0x tag. 
+        This file is structured as in previous versions, the first line indicates the type of structure and then the following lines represent the sequence of bits in the memory. They are in ASCII with only hexadecimal symbols (two digits) without the 0x tag.
       </p>
       <blockquote>
         <pre>v3.0 hex bytes plain big-endian
@@ -38,72 +38,73 @@ a7eb2d655343913e6b7d39db17730c77
       <p>
         If the length of the data set of the file is shorter than the memory space the remaining cells will be initialized to 0 for ROM and for RAM to 0 or randomly according to the parameters in <a href="../opts/index.html">Project options</a>.
       </p>
-	   <p align="center">
-        <img  src="../../../../img-guide/membyteplainbe.png" alt="#########" height=348 width=480>
+      <p align="center">
+        <img src="../../../../img-guide/membyteplainbe.png" alt="#########" height="348" width="480">
       </p>
       <p>
-         In the big-endian mode the memory is considered as a sequence of bytes regardless of the size of its words, with left to right the high bytes and then the low bytes. In the figure above, the hexadecimal signs are represented in their binary value in the blue/green area and it can be observed that the bytes of the file (top) are copied into the memory in sequence with examples for memories with 4bits, 7bits and 12bits words. Observe the alignment offset for words not multiple of 8 for example in the 7-bit word memory.
+        In the big-endian mode the memory is considered as a sequence of bytes regardless of the size of its words, with left to right the high bytes and then the low bytes. In the figure above, the hexadecimal signs are represented in their binary value in the blue/green area and it can be observed that the bytes of the file (top) are copied into the memory in sequence with examples for memories with 4bits, 7bits and 12bits words. Observe the alignment offset for words not multiple of 8 for example in the 7-bit word memory.
       </p>
-      <p>
-	      <h1 id='little'>
-      v3.0 hex byte plain little-endian
-    </h1>
-    <div class="maindiv">
-      <p>
-       This format follows the same rules as previous formats. Unlike the reading direction, in the little-endian mode it is read from right to left.
-      </p>
-      <blockquote>
-        <pre>v3.0 hex bytes plain little-endian
+      <h1 id="little">
+        v3.0 hex byte plain little-endian
+      </h1>
+      <div class="maindiv">
+        <p>
+          This format follows the same rules as previous formats. Unlike the reading direction, in the little-endian mode it is read from right to left.
+        </p>
+        <blockquote>
+          <pre>v3.0 hex bytes plain little-endian
 3f45a8c96ea00042f261613443f8b2cb
 50950e0604427da5a9641e91526c7970
 a7eb2d655343913e6b7d39db17730c77
 058ea8ae931cbe211d218d412c76a495</pre>
-      </blockquote>
-      
-	   <p align="center">
-        <img  src="../../../../img-guide/membyteplainle.png" alt="#########" height=348 width=480>
-      </p>
-      <p>
-        In the little-endian mode the memory is considered as a sequence of bytes with from right to left the low low bits and then the high bits. In the figure above we can see that the bytes of the file (top) are copied into the memory in sequence with examples for memories with 4bits, 7bits and 12bits words. You can observe the alignment offset for example for the 7-bit word memory.
-		<p align="center">
-        <img  class="notscal" src="../../../../img-guide/memelitle.png" alt="#########">
+        </blockquote>
+        <p align="center">
+          <img src="../../../../img-guide/membyteplainle.png" alt="#########" height="348" width="480">
         </p>
-		The same examples are displayed in the component.
-      </p>
-      <h1 id='addr'>
-        v3.0 hex bytes addressed big-endian
-      </h1>
-      <p>
-        this format is identical to the previous ones with the possibility to specify the address of the memory word or to start recording the data of the line.<br>
-		This one is in hexadecimal followed by the character <b>:</b>.
-      </p>
-      <blockquote>
-        <pre>v3.0 hex bytes addressed big-endian
+        <p>
+          In the little-endian mode the memory is considered as a sequence of bytes with from right to left the low low bits and then the high bits. In the figure above we can see that the bytes of the file (top) are copied into the memory in sequence with examples for memories with 4bits, 7bits and 12bits words. You can observe the alignment offset for example for the 7-bit word memory.
+        </p>
+        <p align="center">
+          <img class="notscal" src="../../../../img-guide/memelitle.png" alt="#########">
+        </p>
+        <p>
+          The same examples are displayed in the component.
+        </p>
+        <h1 id="addrbe">
+          v3.0 hex bytes addressed big-endian
+        </h1>
+        <p>
+          this format is identical to the previous ones with the possibility to specify the address of the memory word or to start recording the data of the line.<br>
+          This one is in hexadecimal followed by the character <b>:</b>.
+        </p>
+        <blockquote>
+          <pre>v3.0 hex bytes addressed big-endian
 00: 3f45a8c96ea75086cce5d39d87456709
 20: 56788888882efff0ec45670900000000
 30: 9863fec8a2d75d342e1f008090445578</pre>
-      </blockquote>
-      <p>
-        In this example the 8 words at address 0x10 are not specified. These cells will be initialized to 0 and for RAM according to the parameters in <a href="../opts/index.html">Project options</a>, to 0 or randomly.
-      </p>
-      <p align="center">
-        <img class="notscal" src="../../../../img-guide/membytepleinadrbig.png" alt="#########">
-      </p>
-      <h1 id='addr'>
-        v3.0 hex bytes addressed little-endian
-      </h1>
-      <p>
-         This format is identical to the previous ones with the possibility to specify the address of the memory word or to start recording the data of the line. 
-      </p>
-      <blockquote>
-        <pre>v3.0 hex bytes addressed little-endian
+        </blockquote>
+        <p>
+          In this example the 8 words at address 0x10 are not specified. These cells will be initialized to 0 and for RAM according to the parameters in <a href="../opts/index.html">Project options</a>, to 0 or randomly.
+        </p>
+        <p align="center">
+          <img class="notscal" src="../../../../img-guide/membytepleinadrbig.png" alt="#########">
+        </p>
+        <h1 id="addrle">
+          v3.0 hex bytes addressed little-endian
+        </h1>
+        <p>
+          This format is identical to the previous ones with the possibility to specify the address of the memory word or to start recording the data of the line.
+        </p>
+        <blockquote>
+          <pre>v3.0 hex bytes addressed little-endian
 00: 3f45a8c96ea75086cce5d39d87456709
 20: 56788888882efff0ec45670900000000
 30: 9863fec8a2d75d342e1f008090445578</pre>
-      </blockquote>
-      <p>
-        <strong>Next:</strong> <a href="mem-menu.html">Pop-up menus and files</a>.
-      </p>
+        </blockquote>
+        <p>
+          <strong>Next:</strong> <a href="mem-menu.html">Pop-up menus and files</a>.
+        </p>
+      </div>
     </div>
   </body>
 </html>
