--- a/fr/html/guide/mem/mem-hex.html
+++ b/fr/html/guide/mem/mem-hex.html
@@ -17,7 +17,7 @@
         Editeur hexadécimal
       </h1>
       <p>
-        Logisim inclut un éditeur hexadécimal intégré pour visualiser et éditer le contenu des mémoires. Pour y accéder, ouvrez le menu contextuel du composant (<b class="tkeybd">clic-doit</b> sur le composant) et sélectionnez <b class=menu>|&nbsp;Modifier le contenu&nbsp;|</b>. Pour les ROM il est aussi possible dans les propriétés de sélectionner <b class="property">Contenu</b>.
+        Logisim inclut un éditeur hexadécimal intégré pour visualiser et éditer le contenu des mémoires. Pour y accéder, ouvrez le menu contextuel du composant (<b class="tkeybd">clic-doit</b> sur le composant) et sélectionnez <b class="menu">|&nbsp;Modifier le contenu&nbsp;|</b>. Pour les ROM il est aussi possible dans les propriétés de sélectionner <b class="property">Contenu</b>.
       </p>
       <p align="center">
         <img src="../../../img-guide/mem-hex.png" alt="#########">
@@ -26,8 +26,9 @@
         Les chiffres en italique dans la colonne de gauche affichent les adresses mémoire en hexadécimal. Les autres nombres affichent la valeur des cellules à partir de cette adresse mémoire. L'éditeur hexadécimal peut afficher quatre, huit ou seize valeurs par ligne, en fonction la largeur de la fenêtre. Pour faciliter la visualisation et la lecture, ils sont regroupés par quatre avec un espace entre les groupes.
       </p>
       <p>
-        Il est possible de naviguer dans la mémoire à l'aide de la barre de défilement ou du clavier.  La saisie de caractères hexadécimaux modifiera la valeur de la cellule sélectionnée.
-		 <ul>
+        Il est possible de naviguer dans la mémoire à l'aide de la barre de défilement ou du clavier. La saisie de caractères hexadécimaux modifiera la valeur de la cellule sélectionnée.
+      </p>
+      <ul>
         <li>Les touches <b class="tkeybd">Flèche bas</b> ou <b class="tkeybd">Entrée</b> feront défiler d'une ligne vers le bas.
         </li>
         <li>Les touches <b class="tkeybd">Flèche haut</b> ou <b class="tkeybd">Ctrl+Entrée</b> feront défiler d'une ligne vers le haut.
@@ -38,26 +39,23 @@
         </li>
         <li>Les touches <b class="tkeybd">Flèche gauche</b> ou <b class="tkeybd">Retour arrière</b> feront défiler d'une case à gauche.
         </li>
-		<li>Les touches <b class="tkeybd">Page bas</b> ou <b class="tkeybd">Ctrl+Espace</b> feront défiler d'une page vers le bas.
+        <li>Les touches <b class="tkeybd">Page bas</b> ou <b class="tkeybd">Ctrl+Espace</b> feront défiler d'une page vers le bas.
         </li>
-		<li>Les touches <b class="tkeybd">Page haut</b> ou <b class="tkeybd">Ctr+Retour arrière</b> feront défiler d'une page vers le haut.
+        <li>Les touches <b class="tkeybd">Page haut</b> ou <b class="tkeybd">Ctr+Retour arrière</b> feront défiler d'une page vers le haut.
         </li>
-		<li>Les touches <b class="tkeybd">Home</b> et <b class="tkeybd">End</b> pemetent de déplacer le curseur au début ou a la fin du document.
+        <li>Les touches <b class="tkeybd">Home</b> et <b class="tkeybd">End</b> pemetent de déplacer le curseur au début ou a la fin du document.
         </li>
-		<li>La touche <b class="tkeybd">Del</b> réinitialise la cellule sélectionnée avec un zéros.
+        <li>La touche <b class="tkeybd">Del</b> réinitialise la cellule sélectionnée avec un zéros.
         </li>
       </ul>
-	  
-      </p>
       <p>
         Vous pouvez sélectionner une plage de valeurs en faisant <b class="tkeybd">clic-droit</b> et glisser la souris ou en naviguant dans la mémoire avec le clavier tout en appuyant sur la touche <b class="tkeybd">Maj</b>.<br>
-        Vous pouvez copier, couper, coller, sélectionner les données de la mémoire depuis le menu <b class=menu>|&nbsp;éditer&nbsp;|</b> ou avec les raccourcis associés <b class="tkeybd">Ctrl-C, Ctrl-V, Ctrl-X&hellip;</b><br>
+        Vous pouvez copier, couper, coller, sélectionner les données de la mémoire depuis le menu <b class="menu">|&nbsp;éditer&nbsp;|</b> ou avec les raccourcis associés <b class="tkeybd">Ctrl-C, Ctrl-V, Ctrl-X…</b><br>
         Le presse-papiers peut également être transféré vers/depuis d'autres applications.
       </p>
       <p>
-        Deux boutons (<b class="button">Ouvrir&hellip;</b>, <b class="button">Enregistrer&hellip;</b>) permettent de charger ou d'enregistrer les données depuis un fichier. Vous trouverez les information sur les types de fichier dans  <a href="mem-menu.html">Menu contextuel et fichiers</a>
+        Deux boutons (<b class="button">Ouvrir…</b>, <b class="button">Enregistrer…</b>) permettent de charger ou d'enregistrer les données depuis un fichier. Vous trouverez les information sur les types de fichier dans <a href="mem-menu.html">Menu contextuel et fichiers</a>
       </p>
-	  
       <p>
         <b>Suite&nbsp;:</b> <a href="mem-menu.html">Menu contextuel et fichiers</a>.
       </p>
