--- a/fr/html/guide/mem/mem-vbinary.html
+++ b/fr/html/guide/mem/mem-vbinary.html
@@ -20,14 +20,14 @@
 	     Ce format est une image binaire brute des données de la mémoire dans un fichier.<br>
 		 Il n'y a pas d'en-tête, pas de commentaire, pas de codage. Le fichier n'est probablement pas éditable dans un éditeur de texte commun.<br>
 		 Dans le mode big-endian la mémoire est considérée comme une suite d'octet indépendamment de la dimension de ses mots, avec de gauche à droite les bytes de poids fort puis les bytes de poids faible.<br>
-		 Vous pouvez en trouvez des illustrations dans <a href="mem-v3byte.html#little">v3.0 hex bytes addressed big-endian</a>
+		 Vous pouvez en trouvez des illustrations dans <a href="mem-v3byte.html#addrbe">v3.0 hex bytes addressed big-endian</a>
 	  </p>	  
 	  <h1 id='addr'>
         Binary data little-endian
       </h1>
       <p>
         Ce format est identique au précédent avec les mêmes caractéristiques.<br>
-		Dans le mode little-endian la mémoire est considérée comme une suite d'octet avec de droite à gauche les bits de poids faible puis les bits de poids fort. Vous pouvez en trouvez des illustrations dans <a href="mem-v3byte.html#little">v3.0 hex bytes addressed little-endian</a> 
+		Dans le mode little-endian la mémoire est considérée comme une suite d'octet avec de droite à gauche les bits de poids faible puis les bits de poids fort. Vous pouvez en trouvez des illustrations dans <a href="mem-v3byte.html#addrle">v3.0 hex bytes addressed little-endian</a> 
       </p>
 	  <p>
         <b>Suite&nbsp;:</b> <a href="mem-menu.html">Le menu contextuel et les fichiers</a>.
