--- a/en/html/libs/io/dotmat.html
+++ b/en/html/libs/io/dotmat.html
@@ -107,7 +107,7 @@
               Select Location
             </dt>
             <dd>
-              
+              Determine which side the pines will be on. 
             </dd>
             <dt class="lib">
               On Color
