--- a/fr/html/guide/opts/opts-mouse.html
+++ b/fr/html/guide/opts/opts-mouse.html
@@ -33,7 +33,7 @@
         </li>
         <li>
           <p>
-            Sur le côté supérieur droit se trouve un rectangle qui permet d'insérer une nouvelle combinaison simplement et en dessous se trouve une liste des combinaisons associée aux clics de souris. Par exemple, si vous souhaitez créer de nouveaux fils en déplaçant le curseur, vous devez d'abord sélectionner l'outil de câblage dans l'explorateur (sous la bibliothèque de base) et ensuite vous effectuez la combinaison souhaitée en positionnant le curseur de la souris dans le carré où il est dit "Clic avec une combinaison définie comme Outil de câblage" si cette combinaison est déjà utilisée, le mappage sera remplacé par le nouvel outil. À l'avenir, dans le mode dessins cette combinaison de souris correspondra à l'outil sélectionné dans la barre d'outils ou dans le volet de l'explorateur.
+            Sur le côté supérieur droit se trouve un rectangle qui permet d'insérer une nouvelle combinaison simplement et en dessous se trouve une liste des combinaisons associée aux clics de souris. Par exemple, si vous souhaitez créer de nouveaux fils en déplaçant le curseur, vous devez d'abord sélectionner l'outil de câblage dans l'explorateur (sous la bibliothèque de base) et ensuite vous effectuez la combinaison souhaitée en positionnant le curseur de la souris dans le carré où il est dit "Clic avec une combinaison définie comme Outil de câblage" si cette combinaison est déjà utilisée, le mappage sera remplacé par le nouvel outil. À l'avenir, dans le mode dessins, cette combinaison de souris correspondra à l'outil sélectionné dans la barre d'outils ou dans le volet de l'explorateur.
           </p>
         </li>
         <li>
