--- a/pt/html/guide/prop/oscillate.html
+++ b/pt/html/guide/prop/oscillate.html
@@ -25,7 +25,7 @@
       <p>
         Esse circuito está em condição estável. Mas se você mudar a entrada para 1, o circuito irá efetivamente entrar em um <i>loop</i> infinito. Depois um tempo, o Logisim simplesmente desistirá e mostrará a mensagem "oscilação aparente" dizendo que ele acredita que o circuito esteja oscilando.
       </p>
-      <p align="center">nter>
+      <p align="center">
         <img class="notscal" src="../../../img-guide/prop-oscillate-error.png" alt="#########">
       </p>
       <p>
