--- a/fr/html/guide/opts/opts-simulate.html
+++ b/fr/html/guide/opts/opts-simulate.html
@@ -32,7 +32,7 @@
         <li>
           <p>
             Le menu déroulant <strong>Itérations jusqu'à l'oscillation</strong> indique la durée pendant laquelle un circuit doit être simulé avant de décider qu'il oscille. Cette valeur représente le nombre de pas de l'horloge interne cachée (une simple porte ne prend qu'un pas). La valeur par défaut de 1000 est suffisante pour pratiquement tous les usages, ceci même pour les grands circuits.<br>
-            Mais vous voudrez peut-être augmenter le nombre d'itérations si vous travaillez avec un circuit où Logisim signale de fausses oscillations. Il est peu probable que cela pose problème dans la pratique, cependant il est possible que cela arrive dans un circuit qui incorpore un grand nombre bascule avec le bruit aléatoire activé. A l'inverse vous souhaiterez peut-être réduire le nombre d'itérations si vous travaillez avec un circuit qui a tendance à osciller et que vous utilisez un processeur inhabituellement lent.
+            Mais vous voudrez peut-être augmenter le nombre d'itérations si vous travaillez avec un circuit où Logisim signale de fausses oscillations. Il est peu probable que cela pose problème dans la pratique, cependant il est possible que cela arrive dans un circuit qui incorpore un grand nombre de bascules avec le bruit aléatoire activé. A l'inverse vous souhaiterez peut-être réduire le nombre d'itérations si vous travaillez avec un circuit qui a tendance à osciller et que vous utilisez un processeur inhabituellement lent.
           </p>
         </li>
         <li>
@@ -48,13 +48,6 @@
             Je recommande de garder cette option désactivée, car cette technique introduit des erreurs rares avec les circuits normaux.
           </p>
         </li>
-		<!--
-        <li>
-          <p>
-            Le menu déroulant <strong>Durée d'un pas de l'horloge clk</strong> Quand on est en mode pas-à-pas dans la simulation, détermine l'effet du menu <b class=menu>|&nbsp;Simulation &nbsp;|</b>→<b class=menu>|&nbsp;'clk' un pas &nbsp;|</b> ou du bouton <img class=intxt src="../../../../icons/clock.gif" alt="#########"> dans la vue chronogramme. Avance d'une période complète ou d'une demi-période de l'horloge. Les autres horloges avancent de concert et proportionnellement à leurs paramètres.
-          </p>
-        </li>
-		-->
       </ul>
       <p>
         <b>Suite&nbsp;:</b> <a href="opts-toolbar.html">L'onglet Barre d'outils</a>.
