--- a/docstatus.html
+++ b/docstatus.html
@@ -1308,24 +1308,24 @@
 		<td>Edit image/Delete Use a colorbind...</td>
 	</tr>
 	<tr>
-		<td height="17"  align="center"></td>
+		<td height="17" class="good" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">The Simulation tab</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/guide/prefs/pref-simulation.html">C_</a></td>
-		<td align="center" class="needtask"><a href="./fr/html/guide/prefs/pref-simulation.html">C_</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/prefs/pref-simulation.html">C_</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/prefs/pref-simulation.html">C_</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/guide/prefs/pref-simulation.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/guide/prefs/pref-simulation.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/guide/prefs/pref-simulation.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/prefs/pref-simulation.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/prefs/pref-simulation.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
 	</tr>	
 	<tr>
-		<td height="17" class="good2" align="center">3.5</td>
+		<td height="17" class="good" align="center">3.5</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">The Experimental tab</td>
@@ -1335,7 +1335,7 @@
 		<td align="center" class="nonexist"><a href="./de/html/guide/prefs/pref-exp.html">__</a></td>
 		<td align="center" class="good"><a href="./pt/html/guide/prefs/pref-exp.html">__</a></td>
 		<td align="center" class="good"><a href="./ru/html/guide/prefs/pref-exp.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/guide/prefs/pref-exp.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/prefs/pref-exp.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
