--- a/fr/html/libs/index.html
+++ b/fr/html/libs/index.html
@@ -741,7 +741,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/led.html">Port I/O</a>
+              <a href="io/portio.html">Port I/O</a>
             </td>
           </tr>
           <tr>
@@ -752,7 +752,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/led.html">Repetar Local Bus</a>
+              <a href="io/repetar.html">Repetar Local Bus</a>
             </td>
           </tr>
           <tr>
@@ -763,7 +763,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="io/led.html">Video RVB</a>
+              <a href="io/rgbvideo.html">Video RVB</a>
             </td>
           </tr>
         </tbody>
